--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
     <!-- favicon -->
-    <link rel="shortcut icon" href="assets/images/favicon.ico" />
+    <!-- <link rel="shortcut icon" href="assets/images/favicon.ico" /> -->
 
     <!-- Css -->
     <link href="assets/libs/tiny-slider/tiny-slider.css" rel="stylesheet">
@@ -40,10 +40,10 @@
     <nav id="topnav" class="defaultscroll is-sticky bg-white dark:bg-slate-900">
         <div class="container">
             <!-- Logo container-->
-            <a class="logo pl-0" href="index.html">
+            <!-- <a class="logo pl-0" href="index.html">
                 <img src="assets/images/logo-dark.png" class="inline-block dark:hidden" alt="">
                 <img src="assets/images/logo-light.png" class="hidden dark:inline-block" alt="">
-            </a>
+            </a> -->
 
             <!-- End Logo container-->
             <div class="menu-extras">
@@ -63,12 +63,10 @@
             <div id="navigation">
                 <!-- Navigation Menu-->
                 <ul class="navigation-menu">
-                    <li><a href="###" class="sub-menu-item">Home</a></li>
-                    <li><a href="###" class="sub-menu-item">Videos</a></li>
-                    <li><a href="###" class="sub-menu-item">About Me</a></li>
-                    <li><a href="###" class="sub-menu-item">Contact</a></li>
-                    <li><a href="###" class="sub-menu-item">Merchandise</a></li>
-                    <li><a href="###" class="sub-menu-item">FAQ</a></li>
+                    <li><a href="#about-me" class="sub-menu-item">About Me</a></li>
+                    <li><a href="#exp" class="sub-menu-item">Experience</a></li>
+                    <li><a href="#skills" class="sub-menu-item">Skills</a></li>
+                    <li><a href="#projects" class="sub-menu-item">Projects</a></li>
                 </ul><!--end navigation menu-->
             </div><!--end navigation-->
         </div><!--end container-->
@@ -119,7 +117,7 @@
                 <div class="lg:col-span-4 md:col-span-5">
                     <div class="rounded-md bg-white dark:bg-slate-900 shadow dark:shadow-gray-800">
                         <div class="text-center py-8 p-6 border-b border-gray-100 dark:border-gray-700">
-                            <img src="assets/images/client/01.jpg"
+                            <img src="assets/images/anah/anah.jpeg"
                                 class="h-24 w-24 p-1 shadow-md dark:shadow-gray-800 mx-auto rounded-full block" alt="">
                             <h5 class="mt-5 text-xl font-semibold mb-0">Zaora Zulmianah Anah</h5>
                             <p class="text-slate-400 mb-0">Web Developer</p>
@@ -156,7 +154,7 @@
                     </div>
                 </div>
 
-                <div class="lg:col-span-8 md:col-span-7">
+                <div id="about-me" class="lg:col-span-8 md:col-span-7">
                     <h4 class="text-xl font-semibold">About Me :</h4>
                     <p class="text-slate-400 mt-4">I'm a Web Developer with a Master Degree in Mobiquity, Big Data and
                         System Integration
@@ -165,7 +163,7 @@
                     <p class="text-slate-400 mt-4">Data Structures and Algorithms are the heart of programming.
                     </p>
 
-                    <h4 class="mt-8 text-xl font-semibold">Experience :</h4>
+                    <h4 id="exp" class="mt-8 text-xl font-semibold">Experience :</h4>
 
                     <div class="flex mt-6">
                         <div class="text-slate-400 font-semibold min-w-[80px] text-center">
@@ -218,7 +216,7 @@
                         </div>
                     </div>
 
-                    <div class="flex mt-6">
+                    <div id="skills" class="flex mt-6">
                         <div class="text-slate-400 font-semibold min-w-[80px] text-center">
                             <img src="assets/images/anah/yayasan-entreprise.png" class="h-16 w-16 mx-auto mb-2 block"
                                 alt="">
@@ -272,7 +270,7 @@
                         Effective communication skills to collaborate with designers, developers, and stakeholders.
                         Ability to work in an agile environment and adapt to changing requirements.
                     </p>
-                    <h4 class="mt-8 text-xl font-semibold">Projects :</h4>
+                    <h4 id="projects" class="mt-8 text-xl font-semibold">Projects :</h4>
 
                     <div class="grid lg:grid-cols-2 grid-cols-1 gap-6 mt-8">
                         <div class="group relative block overflow-hidden rounded-md transition-all duration-500">
@@ -285,14 +283,10 @@
                             <div class="content">
 
                                 <div class="title absolute z-10 hidden group-hover:block bottom-4 left-4">
-                                    <a href="portfolio-detail-one.html"
-                                        class="h6 text-md font-medium text-white hover:text-indigo-600 duration-500 ease-in-out">Mockup
-                                        Collection</a>
-                                    <p class="text-slate-100 tag mb-0">Abstract</p>
+                                    <p class="text-slate-100 tag mb-0">Home Salon Service</p>
                                 </div>
                             </div>
                         </div>
-
                         <div class="group relative block overflow-hidden rounded-md transition-all duration-500">
                             <img src="assets/images/anah/anah-laptop.png"
                                 class="group-hover:origin-center group-hover:scale-110 group-hover:rotate-3 transition duration-500"
@@ -303,10 +297,36 @@
                             <div class="content">
                                 <div
                                     class="absolute z-10 hidden group-hover:block bottom-4 left-4 transition-all duration-500">
-                                    <a href="portfolio-detail-one.html"
-                                        class="h6 text-md font-medium text-white hover:text-indigo-600 duration-500 ease-in-out">Mockup
-                                        Collection</a>
-                                    <p class="text-slate-100 tag mb-0">Abstract</p>
+                                    <p class="text-slate-100 tag mb-0">French Course</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="group relative block overflow-hidden rounded-md transition-all duration-500">
+                            <img src="assets/images/anah/laptop-light-admin.png"
+                                class="group-hover:origin-center group-hover:scale-110 group-hover:rotate-3 transition duration-500"
+                                alt="">
+                            <div class="absolute inset-0 group-hover:bg-dark opacity-50 transition duration-500 z-0">
+                            </div>
+
+                            <div class="content">
+                                <div
+                                    class="absolute z-10 hidden group-hover:block bottom-4 left-4 transition-all duration-500">
+                                    <p class="text-slate-100 tag mb-0">Admin Blog Management</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="group relative block overflow-hidden rounded-md transition-all duration-500">
+                            <img src="assets/images/anah/laptop-dark-admin.png"
+                                class="group-hover:origin-center group-hover:scale-110 group-hover:rotate-3 transition duration-500"
+                                alt="">
+                            <div class="absolute inset-0 group-hover:bg-dark opacity-50 transition duration-500 z-0">
+                            </div>
+
+                            <div class="content">
+                                <div
+                                    class="absolute z-10 hidden group-hover:block bottom-4 left-4 transition-all duration-500">
+                                    <p class="text-slate-100 tag mb-0">Admin Stock Management</p>
                                 </div>
                             </div>
                         </div>
@@ -326,24 +346,10 @@
                 <div class="grid md:grid-cols-2 items-center">
                     <div class="md:text-left text-center">
                         <p class="mb-0">©
-                            <script>document.write(new Date().getFullYear())</script> Techwind. Design with <i
-                                class="mdi mdi-heart text-red-600"></i> by <a href="https://shreethemes.in/"
-                                target="_blank" class="text-reset">Shreethemes</a>.
+                            Anah
                         </p>
                     </div>
 
-                    <ul class="list-none md:text-right text-center mt-6 md:mt-0">
-                        <li class="inline"><a href="#"><img src="assets/images/payments/american-ex.png"
-                                    class="max-h-6 inline" title="American Express" alt=""></a></li>
-                        <li class="inline"><a href="#"><img src="assets/images/payments/discover.png"
-                                    class="max-h-6 inline" title="Discover" alt=""></a></li>
-                        <li class="inline"><a href="#"><img src="assets/images/payments/master-card.png"
-                                    class="max-h-6 inline" title="Master Card" alt=""></a></li>
-                        <li class="inline"><a href="#"><img src="assets/images/payments/paypal.png"
-                                    class="max-h-6 inline" title="Paypal" alt=""></a></li>
-                        <li class="inline"><a href="#"><img src="assets/images/payments/visa.png" class="max-h-6 inline"
-                                    title="Visa" alt=""></a></li>
-                    </ul>
                 </div><!--end grid-->
             </div><!--end container-->
         </div>
