--- a/index.html
+++ b/index.html
@@ -87,10 +87,10 @@
                             responsive and user-friendly websites.</p>
 
                         <div class="mt-6">
-                            <a href="contact-one.html"
+                            <a href="#projects"
                                 class="btn bg-indigo-600 hover:bg-indigo-700 border-indigo-600 hover:border-indigo-700 text-white rounded-md mr-2 mt-2">✨
                                 Explore my portfolio</a>
-                            <a href="documentation.html"
+                            <a href="#me"
                                 class="btn bg-transparent hover:bg-indigo-600 border-indigo-600 text-indigo-600 hover:text-white rounded-md mt-2">🤙
                                 Get in touch</a>
                         </div>
@@ -111,7 +111,7 @@
     <!-- End Hero -->
 
     <!-- Start -->
-    <section class="relative md:py-24 py-16">
+    <section id="me" class="relative md:py-24 py-16">
         <div class="container">
             <div class="grid md:grid-cols-12 grid-cols-1 gap-[30px]">
                 <div class="lg:col-span-4 md:col-span-5">
