--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                             </ul>
 
 
-                            <a href="contact-one.html"
+                            <a href="https://api.whatsapp.com/send?phone=6287772897512"
                                 class="btn bg-indigo-600 hover:bg-indigo-700 border-indigo-600 hover:border-indigo-700 text-white rounded-md mt-6">Contact
                                 Me</a>
                         </div>
