--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <!-- <link rel="shortcut icon" href="assets/images/favicon.ico" /> -->
 
     <!-- Css -->
+    <link href="assets/libs/tobii/css/tobii.min.css" rel="stylesheet">
     <link href="assets/libs/tiny-slider/tiny-slider.css" rel="stylesheet">
     <!-- Main Css -->
     <link href="assets/libs/%40iconscout/unicons/css/line.css" type="text/css" rel="stylesheet" />
@@ -502,12 +503,16 @@
                                 alt="">
                             <div class="absolute inset-0 group-hover:bg-dark opacity-50 transition duration-500 z-0">
                             </div>
-
                             <div class="content">
-
                                 <div class="title absolute z-10 hidden group-hover:block bottom-4 left-4">
                                     <p class="text-slate-100 tag mb-0">Bimbel</p>
                                 </div>
+                            </div>
+                            <div class="absolute bottom-2/4 translate-y-2/4 right-0 left-0 text-center">
+                                <a href="#!" data-type="youtube" data-id="yba7hPeTSjk"
+                                    class="lightbox h-10 w-10 rounded-full shadow-lg dark:shadow-gray-800 inline-flex items-center justify-center bg-white dark:bg-slate-900 text-indigo-600">
+                                    <i class="mdi mdi-play inline-flex items-center justify-center text-2xl"></i>
+                                </a>
                             </div>
                         </div>
 
@@ -644,6 +649,8 @@
     <!-- Switcher -->
 
     <!-- JAVASCRIPTS -->
+    <script src="assets/js/contact.js"></script>
+    <script src="assets/libs/tobii/js/tobii.min.js"></script>
     <script src="assets/libs/tiny-slider/min/tiny-slider.js"></script>
     <script src="assets/libs/feather-icons/feather.min.js"></script>
     <script src="assets/js/plugins.init.js"></script>
